longhorn/longhorn-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`longhorn.home`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
