longhorn/pod_with_pvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          ports:
            - containerPort: 9000
          args:
            - server
            - /data
          volumeMounts:
            - name: minio-pv-storage
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: minio-pv-storage
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
   name: minio-svc
   labels:
      app: minio
spec:
   ports:
      - port: 9001
        name: minio-data
        targetPort: 9000
   selector:
      app: minio
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`minio.home`)
    kind: Rule
    services:
    - name: minio-svc
      port: 9001
